WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275749
Safari crashes on passkey requests
https://bugs.webkit.org/show_bug.cgi?id=275749
Summary
Safari crashes on passkey requests
Jason Lee
Reported
2024-06-21 13:56:39 PDT
On macOS Ventura, Safari crashes on passkey requests
Attachments
Add attachment
proposed patch, testcase, etc.
Jason Lee
Comment 1
2024-06-21 13:56:57 PDT
<
rdar://problem/125735223
>
Jason Lee
Comment 2
2024-06-21 13:58:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30059
EWS
Comment 3
2024-06-21 14:34:14 PDT
Committed
280257@main
(c39e819f26e1): <
https://commits.webkit.org/280257@main
> Reviewed commits have been landed. Closing PR #30059 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug