Safari crashes on passkey requests https://bugs.webkit.org/show_bug.cgi?id=275749 rdar://125735223

Reviewed by Aditya Keerthi.

There was a mismatch between WebKit and AuthenticationServicesCore in the legacy
passkey code path.

* Source/WebKit/Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::configureAssertionOptions):

Canonical link: https://commits.webkit.org/280257@main